# quadruped_ros

./: README.md
dogbot/dogbot_control/config/: dogbot_controllers.yaml
dogbot/dogbot_control/controller/: position_control.yaml
dogbot/dogbot_description/meshes/: Realsense T265C.stl  rplidar_main.dae
dogbot/dogbot_description/urdf/: dogbot.xacro
dogbot/dogbot_gazebo/launch/: dog.launch  dogbot_sim.launch  gztest.launch
dogbot/dogbot_gazebo/models/floor/: model.sdf
dogbot/dogbot_gazebo/models/floor_small/: model.sdf
dogbot/dogbot_gazebo/models/food/: food.sdf  model.config
dogbot/dogbot_gazebo/models/id1/meshes/: id1.dae
dogbot/dogbot_gazebo/models/id2/: model.sdf
dogbot/dogbot_gazebo/models/id2/meshes/: id2.dae
dogbot/dogbot_gazebo/models/id3/: model.sdf
dogbot/dogbot_gazebo/models/id3/meshes/: id3.dae
dogbot/dogbot_gazebo/models/qr_base/meshes/: qr_base.dae
dogbot/dogbot_gazebo/models/walls/: model.config  model.sdf
dogbot/dogbot_gazebo/models/walls/materials/scripts/: grey_wall.material
dogbot/dogbot_gazebo/models/walls2/: model.config  model.sdf
dogbot/dogbot_gazebo/models/walls3/: model.config  model.sdf
dogbot/dogbot_gazebo/worlds/: big.world  small.world  test_world.world
popt/: CMakeLists.txt  package.xml
popt/include/: Controller.h  Planner.h  topt.h
popt/launch/: main.launch
popt/src/: topt.cpp
popt/src/client/: Controller.cpp  Converter.cc  Main.cpp  Planner.cpp
rviz_dogbot/: CMakeLists.txt  package.xml
rviz_dogbot/rviz/: config_1.rviz
